@@ -12,8 +12,8 @@ package org.eclipse.openvsx.repositories;
 import java.lang.reflect.Modifier;
 import java.time.Duration;
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Stream;
 
 import jakarta.persistence.EntityManager;
@@ -39,11 +39,13 @@ import org.eclipse.openvsx.entities.ExtensionVersionState;
 import org.eclipse.openvsx.entities.FileDecision;
 import org.eclipse.openvsx.entities.Namespace;
 import org.eclipse.openvsx.entities.PersonalAccessToken;
+import org.eclipse.openvsx.entities.PersonalAccessTokenType;
 import org.eclipse.openvsx.entities.ScanCheckResult;
 import org.eclipse.openvsx.entities.ScanStatus;
 import org.eclipse.openvsx.entities.SignatureKeyPair;
 import org.eclipse.openvsx.entities.Tier;
 import org.eclipse.openvsx.entities.TierType;
+import org.eclipse.openvsx.entities.TrustedPublisher;
 import org.eclipse.openvsx.entities.UsageStats;
 import org.eclipse.openvsx.entities.UserData;
 import org.eclipse.openvsx.json.QueryRequest;
@@ -88,6 +90,7 @@ class RepositoryServiceSmokeTest extends AbstractPostgresContainerTest {
         extVersion.setTargetPlatform("targetPlatform");
         extVersion.setExtension(extension);
         var personalAccessToken = new PersonalAccessToken();
+        personalAccessToken.setType(PersonalAccessTokenType.LLT);
         var keyPair = new SignatureKeyPair();
         keyPair.setPrivateKey(new byte[0]);
         keyPair.setPublicKeyText("");
@@ -146,6 +149,14 @@ class RepositoryServiceSmokeTest extends AbstractPostgresContainerTest {
         dailyUsageStats.setTotalRequests(1L);
         dailyUsageStats.setP95Requests(1L);
 
+        var trustedPublisher = new TrustedPublisher();
+        trustedPublisher.setExtension(extension);
+        trustedPublisher.setProvider("provider");
+        trustedPublisher.setRegistration(Map.of("foo", "bar"));
+        trustedPublisher.setClaims(Map.of("claim", "value"));
+        trustedPublisher.setCreatedBy(userData);
+        trustedPublisher.setCreatedTimestamp(NOW);
+
         // Persist all entities consistently using EntityManager
         Stream.of(
                 namespace,
@@ -162,7 +173,8 @@ class RepositoryServiceSmokeTest extends AbstractPostgresContainerTest {
                 scanCheckResult,
                 tier,
                 customer,
-                usageStats)
+                usageStats,
+                trustedPublisher)
                 .forEach(em::persist);
         em.flush();
 
@@ -190,9 +202,9 @@ class RepositoryServiceSmokeTest extends AbstractPostgresContainerTest {
                 () -> repositories.countPublishersThatClaimedNamespaceOwnership(),
                 () -> repositories.countUsers(),
                 () -> repositories.downloadsTotal(),
-                () -> repositories.findAccessToken("value"),
-                () -> repositories.findAccessToken(1L),
-                () -> repositories.findAccessTokens(userData),
+                () -> repositories.findPersonalAccessToken("value"),
+                () -> repositories.findPersonalAccessToken(1L),
+                () -> repositories.findPersonalAccessTokens(userData),
                 () -> repositories.findActiveExtensions(namespace),
                 () -> repositories.findActiveReviews(extension),
                 () -> repositories.findActiveReviews(extension, userData),
@@ -244,7 +256,7 @@ class RepositoryServiceSmokeTest extends AbstractPostgresContainerTest {
                 () -> repositories.findFilesByType(List.of(extVersion), STRING_LIST),
                 () -> repositories.countVersions("namespaceName", "extensionName"),
                 () -> repositories.topMostDownloadedExtensions(1),
-                () -> repositories.countActiveAccessTokens(userData),
+                () -> repositories.countActivePersonalAccessTokensAndType(userData, PersonalAccessTokenType.LLT),
                 () -> repositories.topMostActivePublishingUsers(1),
                 () -> repositories.topNamespaceExtensions(1),
                 () -> repositories.topNamespaceExtensionVersions(1),
@@ -294,8 +306,8 @@ class RepositoryServiceSmokeTest extends AbstractPostgresContainerTest {
                 () -> repositories.findPublicId("namespaceName", "extensionName"),
                 () -> repositories.findPublicId("namespaceName.extensionName"),
                 () -> repositories.findNamespacePublicId("namespaceName.extensionName"),
-                () -> repositories.updateExtensionPublicIds(Collections.emptyMap()),
-                () -> repositories.updateNamespacePublicIds(Collections.emptyMap()),
+                () -> repositories.updateExtensionPublicIds(Map.of()),
+                () -> repositories.updateNamespacePublicIds(Map.of()),
                 () -> repositories.extensionPublicIdExists("namespaceName.extensionName"),
                 () -> repositories.namespacePublicIdExists("namespaceName.extensionName"),
                 () -> repositories.fetchSitemapRows(),
@@ -324,19 +336,21 @@ class RepositoryServiceSmokeTest extends AbstractPostgresContainerTest {
                 () -> repositories.deleteFiles(extVersion),
                 () -> repositories.findExtensionTargetPlatforms(extension),
                 () -> repositories.deactivateKeyPairs(),
-                () -> repositories.findActiveAccessTokens(userData),
+                () -> repositories.findActivePersonalAccessTokensAndType(userData, PersonalAccessTokenType.LLT),
+                () -> repositories.findAllPersonalAccessTokensByVersion(0),
                 () -> repositories.findLatestVersions(List.of(1L)),
                 () -> repositories.hasSameVersion(extVersion),
                 () -> repositories.hasActiveReview(extension, userData),
                 () -> repositories.findLatestVersionsIsPreview(List.of(1L)),
-                () -> repositories.findAccessToken(userData, "description"),
+                () -> repositories.findPersonalAccessToken(userData, "description"),
                 () -> repositories.findMemberships(userData),
                 () -> repositories.canPublishInNamespace(userData, namespace),
                 () -> repositories.findLatestVersion("namespaceName", "extensionName", "targetPlatform", false, false),
                 () -> repositories.hasMembership(userData, namespace),
                 () -> repositories
                         .findFirstUnresolvedDependency(List.of(new ExtensionId("namespaceName", "extensionName"))),
-                () -> repositories.hasAccessToken("tokenValue"),
+                () -> repositories.findAllPersonalAccessTokens(),
+                () -> repositories.hasPersonalAccessToken("tokenValue"),
                 () -> repositories
                         .findSignatureKeyPairPublicId("namespaceName", "extensionName", "targetPlatform", "version"),
                 () -> repositories.findFirstMembership("namespaceName"),
@@ -356,20 +370,19 @@ class RepositoryServiceSmokeTest extends AbstractPostgresContainerTest {
                         "namespace"),
                 () -> repositories.findLatestVersion(userData, "namespaceName", "extensionName"),
                 () -> repositories.isDeleteAllActiveVersions("namespaceName", "extensionName"),
-                () -> repositories.deactivateAccessTokens(userData),
-                () -> repositories.expireAccessTokens(NOW),
-                () -> repositories.findExpiringAccessTokensWithoutNotification(NOW, page),
-                () -> repositories.updateExpiresTimeForLegacyAccessTokens(NOW),
+                () -> repositories.deactivatePersonalAccessTokens(userData),
+                () -> repositories.expirePersonalAccessTokens(NOW),
+                () -> repositories.findExpiringPersonalAccessTokensWithoutNotification(NOW, page),
+                () -> repositories.updateExpiresTimeForLegacyPersonalAccessTokens(NOW, PersonalAccessTokenType.LLT),
                 () -> repositories.findSimilarExtensionsByLevenshtein(
                         "extensionName",
                         "namespaceName",
                         "displayName",
-                        Collections.emptyList(),
+                        List.of(),
                         0.5,
                         false,
                         10),
-                () -> repositories
-                        .findSimilarNamespacesByLevenshtein("namespaceName", Collections.emptyList(), 0.5, false, 10),
+                () -> repositories.findSimilarNamespacesByLevenshtein("namespaceName", List.of(), 0.5, false, 10),
                 () -> repositories.findExtensionScans(extVersion),
                 () -> repositories.findLatestExtensionScan(extVersion),
                 () -> repositories.findExtensionScans(extension),
@@ -538,6 +551,9 @@ class RepositoryServiceSmokeTest extends AbstractPostgresContainerTest {
                 () -> repositories.findDailyUsageStats(customer, NOW.toLocalDate()),
                 () -> repositories.findUnprocessedDaysForDailyUsage(customer),
                 () -> repositories.saveDailyUsageStats(dailyUsageStats),
+                () -> repositories.findTrustedPublishersByExtension(extension),
+                () -> repositories.findTrustedPublisher(1L),
+                () -> repositories.deleteTrustedPublisher(trustedPublisher),
                 () -> repositories.deleteTier(tier),
                 () -> repositories.deleteCustomer(customer),
                 // Extension scan delete method - add last, still not clear why but otherwise the test fails
